# fenetrage-remplissage-polygones

./: .gitignore  CMakeLists.txt  OpenGL 4A.sln  README.md  init.bat
FirstApp/: Dragon.datah  FirstApp.cpp  FirstApp.vcxproj  FirstApp.vcxproj.filters  basic.fs.glsl  imgui.ini
FirstApp/x64/Debug/: FirstApp.exe.recipe  vc142.idb
FirstApp/x64/Debug/FirstApp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FirstApp.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
resources/shaders/: basic.frag  basic.vert  myShader.vert
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  Color.h  CustomMath.cpp  Dragon.h  ImguiSetup.cpp  ImguiSetup.h  Mesh.cpp  Mesh.h  Point.h  Polygon.h  Shader.cpp  Shader.h  hodgman.cpp  hodgman.h  imgui.cpp  imgui.h  main.cpp
src/Math/: CustomMath.cpp  CustomMath.h  Edge.cpp  Edge.h  Lca.cpp  Lca.h  Point.cpp  Point.h  hodgman.h
src/Math/Windowing/: hodgman.cpp  hodgman.h
x64/Debug/: FirstApp.ilk
